--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FryJourney Settings</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
-    <script type="application/javascript" src="composeApp.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>GlassOfWater</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="skiko.js"> </script>
 </head>
 <body>
+<canvas id="ComposeTarget"></canvas>
+<script src="glassOfWater.js"> </script>
 </body>
 </html>
