--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="/favicon.ico" sizes="any">
-        <title>FryLab</title>
-        <script src="https://telegram.org/js/telegram-web-app.js"></script>
-        <script src="skiko.js"></script>
-        <script src="composeApp.js"></script>
-        <style>
-            html,
-            body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
-        </style>
-    </head>
-    <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FryLab</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script type="application/javascript" src="composeApp.js"></script>
+</head>
+<body>
+</body>
 </html>
