--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <title>FryLab</title>
         <link type="text/css" rel="stylesheet" href="styles.css">
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
-        <script type="application/javascript" src="composeApp.js"></script>
+        <script src="skiko.js"> </script>
     </head>
     <body>
+    <script type="application/javascript" src="composeApp.js"></script>
+<!--        <canvas id="ComposeTarget"></canvas>-->
+<!--        <script src="glassOfWater.js"> </script>-->
     </body>
 </html>
