--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="skiko.js"></script>
     </head>
     <body>
-        <script src="composeApp.js"></script>
+        <canvas id="ComposeTarget"></canvas>
+        <script type="application/javascript" src="composeApp.js"></script>
     </body>
 </html>
