--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         // Выводим queryId на страницу или используем как нужно
                         document.body.innerHTML += `<p>Query ID: ${queryId}</p>`;
                     } else {
-                         alert("Query ID not found");
+                         alert("Query ID not found, Query ID:" + queryId);
                     }
                 } else {
                     alert("Telegram WebApp is not available");
